[package]
name = "outlog"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-cloudwatchlogs = "1.47.0"
hostname = "0.4.0"
tokio = { version = "1.40.0", features = ["macros", "io-std", ] }
clap = { version = "4.5.17", features = ["derive", "env"] }
async-trait = "0.1.82"
mockall = "0.13.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
