[package]
name = "logup"
version = "0.1.1"
edition = "2021"
description = "Logup is a UNIX-style command that can be used to pipe stdout logs to location on disk or in the cloud without the need of an agent, logrotate, systemd or other configuration files"
repository = "https://github.com/lucabrunox/logup"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["logging", "cloud", "linux", "cli", "pipe"]
categories = ["command-line-interface", "development-tools::debugging"]
exclude = [
  "/.github/",
  "/.gitignore",
]

[dependencies]
aws-config = "1.5.5"
aws-sdk-cloudwatchlogs = "1.47.0"
hostname = "0.4.0"
tokio = { version = "1.40.0", features = ["macros", "io-std", ] }
clap = { version = "4.5.17", features = ["derive", "env"] }
async-trait = "0.1.82"
mockall = "0.13.0"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"
